--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-.DS_Store
 node_modules
 .env
+.openzeppelin/unknown-*.json
+.vscode
 coverage
 coverage.json
 typechain
@@ -8,3 +9,6 @@ typechain
 #Hardhat files
 cache
 artifacts
+
+#Macbook files
+.DS_Store
