--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "typechain": "^5.2.0",
     "typescript": "^4.5.4"
   },
+  "scripts": {
+    "solidity-metrics": "npx hardhat run scripts/audit/metrics.js"
+  },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
-    "hardhat-contract-sizer": "^2.3.0"
+    "hardhat-contract-sizer": "^2.3.0",
+    "solidity-code-metrics": "^0.0.22"
   }
 }
